# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-servicebench-env"
version = "0.1.0"
description = "ServiceBench Environment for OpenEnv - multi-service API orchestration for evaluating AI agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "servicebench_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["servicebench_env", "servicebench_env.server"]
package-dir = { "servicebench_env" = ".", "servicebench_env.server" = "server" }
